--- a/lib/messages/en.yml
+++ b/lib/messages/en.yml
@@ -39,7 +39,7 @@ en:
   3. exit "
   registration_name_error: "Oooops, please enter a valid name! It must be more than 3 and less than 20 symbols."
   guess: "Opps, secret code must to be from four digits in range from 1 to 6"
-  lost_game_message: "Oh, your attempts ended..."
+  lost_game_message: "Oh, your attempts ended... Your code was:"
   command_int_error: "You need to pass 4 integers, each integer must be in range from 1 to 6."
   win_game_message: "Yayy, u won the game! Congrats!"
   save_results_message: "Do you want to save result? 1. yes 2. no"
