--- a/lib/database/data.yml
+++ b/lib/database/data.yml
@@ -1,13 +1,19 @@
 ---
-- :name: 
-  :difficulty: You had to 1 hint and 5 attempts
+- :name: EMMA
+  :difficulty: hell
   :attempts_total: 5
-  :attempts_used: 0
+  :attempts_used: 2
   :hints_total: 1
   :hints_used: 0
-- :name: 
-  :difficulty: You had to 1 hint and 5 attempts
-  :attempts_total: 5
-  :attempts_used: 0
+- :name: Denis
+  :difficulty: medium
+  :attempts_total: 10
+  :attempts_used: 2
   :hints_total: 1
-  :hints_used: 0
+  :hints_used: 1
+- :name: Ponny
+  :difficulty: medium
+  :attempts_total: 10
+  :attempts_used: 2
+  :hints_total: 1
+  :hints_used: 1
