--- a/lib/database/data.yml
+++ b/lib/database/data.yml
@@ -1,31 +1,7 @@
 ---
-- :name: EMMA
-  :difficulty: hell
+- :name: 
+  :difficulty: 
   :attempts_total: 5
-  :attempts_used: 2
+  :attempts_used: 0
   :hints_total: 1
   :hints_used: 0
-- :name: Denis
-  :difficulty: medium
-  :attempts_total: 10
-  :attempts_used: 2
-  :hints_total: 1
-  :hints_used: 1
-- :name: Ponny
-  :difficulty: medium
-  :attempts_total: 10
-  :attempts_used: 2
-  :hints_total: 1
-  :hints_used: 1
-- :name: ggggg
-  :difficulty: hell
-  :attempts_total: 5
-  :attempts_used: 2
-  :hints_total: 1
-  :hints_used: 0
-- :name: lisa
-  :difficulty: easy
-  :attempts_total: 15
-  :attempts_used: 2
-  :hints_total: 2
-  :hints_used: 1
