--- a/lib/database/data.yml
+++ b/lib/database/data.yml
@@ -1,21 +1,33 @@
 ---
-:name: EMMA
+- :name: Harry
   :difficulty: hell
-  :attempts_total: 5
-  :attempts_used: 0
-  :attempts_used: 2
-  :hints_total: 1
+  :attempts_used: 4
+  :hints_used: 0
+- :name: Ponny
+  :difficulty: easy
+  :attempts_used: 6
   :hints_used: 0
 - :name: Denis
   :difficulty: medium
-  :attempts_total: 10
-  :attempts_used: 2
-  :hints_total: 1
+  :attempts_used: 5
   :hints_used: 0
-  :hints_used: 1
-- :name: Ponny
-  :difficulty: medium
-  :attempts_total: 10
+- :name: Rick
+  :difficulty: hell
   :attempts_used: 2
-  :hints_total: 1
+  :hints_used: 1
+- :name: Morty
+  :difficulty: easy
+  :attempts_used: 7
+  :hints_used: 0
+- :name: Emma
+  :difficulty: medium
+  :attempts_used: 2
+  :hints_used: 0
+- :name: Konyaka
+  :difficulty: easy
+  :attempts_used: 7
+  :hints_used: 2
+- :name: Lolla
+  :difficulty: hell
+  :attempts_used: 3
   :hints_used: 1
