--- a/lib/messages/en.yml
+++ b/lib/messages/en.yml
@@ -37,12 +37,14 @@ en:
   promt_to_enter_secret_code_hint_exit: "1. Enter your secret code
   2. hint
   3. exit "
-  registration_name_error: "Oooops, please enter a valid name! It must be more than 3 and less than 20 symbols."
   guess: "Opps, secret code must to be from four digits in range from 1 to 6"
-  lost_game_message: "Oh, your attempts ended... Your code was:"
-  command_int_error: "You need to pass 4 integers, each integer must be in range from 1 to 6."
+  lost_game_message: "Oh, your attempts ended... Your code was: %{code}"
+  command_int_error: "Each integer must be in range from 1 to 6."
   win_game_message: "Yayy, u won the game! Congrats!"
   save_results_message: "Do you want to save result? 1. yes 2. no"
   success_save_message: "Your result was saved"
   have_no_hints_message: "Oh, your hints ended"
-  digit_on_place: "Digit %{number} on place %{code}"
+  digit_on_place: "Hint number: %{code}"
+  registration_name_emptyness_error: "Name must be not empty"
+  registration_name_length_error: "It must be more than 3 and less than 20 symbols."
+  command_length_error: "Command must from four integers"
