--- a/database/data_test.yml
+++ b/database/data_test.yml
@@ -1,1 +1,61 @@
---- []
+---
+- :name: Denis
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 15
+  :all_hints: 2
+  :hints_used: 0
+- :name: Emma
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 15
+  :all_hints: 2
+  :hints_used: 1
+- :name: Emma
+  :difficulty: hell
+  :all_attempts: 15
+  :attempts_used: 1
+  :all_hints: 2
+  :hints_used: 0
+- :name: Emma
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 3
+  :all_hints: 2
+  :hints_used: 1
+- :name: Emma
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 1
+  :all_hints: 2
+  :hints_used: 0
+- :name: Emma
+  :difficulty: medium
+  :all_attempts: 15
+  :attempts_used: 5
+  :all_hints: 2
+  :hints_used: 0
+- :name: emma
+  :difficulty: hell
+  :all_attempts: 5
+  :attempts_used: 1
+  :all_hints: 1
+  :hints_used: 0
+- :name: kom
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 1
+  :all_hints: 2
+  :hints_used: 0
+- :name: emma
+  :difficulty: hell
+  :all_attempts: 5
+  :attempts_used: 2
+  :all_hints: 1
+  :hints_used: 0
+- :name: emma
+  :difficulty: easy
+  :all_attempts: 15
+  :attempts_used: 1
+  :all_hints: 2
+  :hints_used: 0
